cambio de letra

--- a/inidex.html
+++ b/inidex.html
@@ -53,7 +53,7 @@ where knowledge meets achievement, history meets future, and ambition meets insp
     <label>Natural Sciences
     <input type="radio" name="radio-group" value="natural Sciences"/>
     </label>
-    <label>Social Sciences
+    <label>Social Science
    <input type="radio" name="radio-group" value="Social Sciences"/>
    </label>
    </div>
